# voice-spinning-donut

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/voice_spinning_donut/: __main__.py  config.py  utils.py
