[project]
name = "voice-spinning-donut"
version = "0.1.0"
requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.md"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
